그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3239e869",
    "metadata": {},
    "outputs": [
@@ -632,10 +632,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 0 1 1 0\n",
-      "1 1 0 1 1 0\n",
-      "1 1 1 1 1 1\n",
-      "1 1 1 1 0 1\n"
+      "38\n"
      ]
     }
    ],
@@ -645,25 +642,38 @@
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''4 6\n",
-    "110110\n",
-    "110110\n",
-    "111111\n",
-    "111101''')\n",
+    "sys.stdin = StringIO('''2 25\n",
+    "1011101110111011101110111\n",
+    "1110111011101110111011101''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "N, M = map(int, input().split())\n",
     "maze = [list(map(int, input().rstrip())) for _ in range(N)]\n",
+    "directions = [(-1, 0), (+1, 0), (0, -1), (0, +1)]\n",
     "\n",
     "\n",
+    "def BFS(height, width):\n",
+    "    \n",
+    "    final_node = (height-1, width-1)\n",
+    "    start_node = (0, 0)\n",
     "\n",
-    "def BFS ():\n",
-    "    pass\n",
+    "    dq = deque([start_node])\n",
+    "    maze[0][0] = 2\n",
     "\n",
+    "    while dq:\n",
+    "        r, c = dq.popleft()\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = (r + dr, c + dc)\n",
+    "            if (nr, nc) == final_node:\n",
+    "                return maze[r][c]\n",
+    "            if 0 <= nr < height and 0 <= nc < width and maze[nr][nc] == 1:\n",
+    "                dq.append((nr, nc))\n",
+    "                maze[nr][nc] = maze[r][c] + 1\n",
+    "    else:\n",
+    "        return -1\n",
     "\n",
-    "for row in maze:\n",
-    "    print(*row)\n"
+    "print(BFS(N, M))"
    ]
   },
   {
