그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -678,12 +678,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "1f6e83e0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 10\t1697\t 숨바꼭질"
+    "# 10\t1697\t 숨바꼭질\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 17''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "from collections import deque\n",
+    "MAX = 100000\n",
+    "\n",
+    "def BFS():\n",
+    "\n",
+    "    if N == M:\n",
+    "        return 0\n",
+    "    \n",
+    "    dq = deque([(N, 0)])\n",
+    "    visited = {N}\n",
+    "\n",
+    "    while dq:\n",
+    "        cur, depth = dq.popleft()\n",
+    "        depth += 1\n",
+    "\n",
+    "        for temp in (cur - 1, cur + 1, cur * 2):\n",
+    "            if 0 <= temp <= MAX and temp not in visited:\n",
+    "                if temp == M:\n",
+    "                    return depth\n",
+    "                elif temp > M :\n",
+    "                    dq.append((temp, depth))\n",
+    "                    visited.add(temp)\n",
+    "                    break\n",
+    "                dq.append((temp, depth))\n",
+    "                visited.add(temp)\n",
+    "    else:\n",
+    "        return -1\n",
+    "\n",
+    "print(BFS())"
    ]
   },
   {
