그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -733,12 +733,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "5ec0427a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "28\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 11\t7562\t 나이트의 이동"
+    "# 11\t7562\t 나이트의 이동\n",
+    "from typing import Deque\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3\n",
+    "8\n",
+    "0 0\n",
+    "7 0\n",
+    "100\n",
+    "0 0\n",
+    "30 50\n",
+    "10\n",
+    "1 1\n",
+    "1 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "steps = (-2, -1, +1, +2)\n",
+    "directions = [\n",
+    "    (dr, dc)\n",
+    "    for dr in steps\n",
+    "    for dc in steps\n",
+    "    if abs(dr) + abs(dc) == 3\n",
+    "]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def is_vaild_idx(row_idx, col_idx, board_length):\n",
+    "    return 0 <= row_idx < board_length and 0 <= col_idx < board_length\n",
+    "\n",
+    "def BFS(board_length, start_node, goal_node):\n",
+    "    board = [[False] * board_length for _ in range(board_length)]\n",
+    "\n",
+    "    dq = deque([ start_node ])  # node, depth\n",
+    "    board[start_node[0]][start_node[1]] = True\n",
+    "    depth = 0\n",
+    "    while dq:\n",
+    "        for _ in range(len(dq)):\n",
+    "            node= dq.popleft()\n",
+    "            if node == goal_node: \n",
+    "                return depth\n",
+    "            \n",
+    "            for dr, dc in directions:\n",
+    "                nr, nc = node[0] + dr, node[1] + dc\n",
+    "                if is_vaild_idx(nr, nc, board_length) and not board[nr][nc]:\n",
+    "                    dq.append((nr, nc))\n",
+    "                    board[nr][nc] = True\n",
+    "        depth += 1\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "N = int(input())\n",
+    "out = []\n",
+    "for _ in range(N):\n",
+    "\n",
+    "    board_length = int(input())\n",
+    "    start_node = tuple(map(int, input().split()))\n",
+    "    goal_node = tuple(map(int, input().split()))\n",
+    "\n",
+    "    out.append(BFS(board_length, start_node, goal_node))\n",
+    "\n",
+    "print(\"\\n\".join(map(str, out)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3261992f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "28\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11\t7562\t 나이트의 이동\n",
+    "\n",
+    "import sys ## 양방향 BFS 심화\n",
+    "from collections import deque\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3\n",
+    "8\n",
+    "0 0\n",
+    "7 0\n",
+    "100\n",
+    "0 0\n",
+    "30 50\n",
+    "10\n",
+    "1 1\n",
+    "1 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "steps = (-2, -1, 1, 2)\n",
+    "directions = [\n",
+    "    (dr, dc)\n",
+    "    for dr in steps\n",
+    "    for dc in steps\n",
+    "    if abs(dr) + abs(dc) == 3\n",
+    "]\n",
+    "\n",
+    "def is_valid(r, c, n):\n",
+    "    return 0 <= r < n and 0 <= c < n\n",
+    "\n",
+    "def bidirectional_bfs(n, start, goal):\n",
+    "    if start == goal:\n",
+    "        return 0\n",
+    "\n",
+    "    visited_start = [[-1] * n for _ in range(n)]\n",
+    "    visited_goal = [[-1] * n for _ in range(n)]\n",
+    "\n",
+    "    dq_start = deque([start])\n",
+    "    dq_goal = deque([goal])\n",
+    "\n",
+    "    visited_start[start[0]][start[1]] = 0\n",
+    "    visited_goal[goal[0]][goal[1]] = 0\n",
+    "\n",
+    "    while dq_start and dq_goal:\n",
+    "        if len(dq_start) <= len(dq_goal):\n",
+    "            res = expand(dq_start, visited_start, visited_goal, n)\n",
+    "        else:\n",
+    "            res = expand(dq_goal, visited_goal, visited_start, n)\n",
+    "\n",
+    "        if res != -1:\n",
+    "            return res\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "def expand(dq, visited_self, visited_other, n):\n",
+    "    for _ in range(len(dq)):\n",
+    "        r, c = dq.popleft()\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if not is_valid(nr, nc, n):\n",
+    "                continue\n",
+    "            if visited_self[nr][nc] != -1:\n",
+    "                continue\n",
+    "\n",
+    "            visited_self[nr][nc] = visited_self[r][c] + 1\n",
+    "\n",
+    "            if visited_other[nr][nc] != -1:\n",
+    "                return visited_self[nr][nc] + visited_other[nr][nc]\n",
+    "\n",
+    "            dq.append((nr, nc))\n",
+    "    return -1\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    n = int(input())\n",
+    "    start = tuple(map(int, input().split()))\n",
+    "    goal = tuple(map(int, input().split()))\n",
+    "    print(bidirectional_bfs(n, start, goal))\n"
    ]
   },
   {
