--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -914,7 +914,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
+   "id": "8ddf6a59",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "최단 거리: 13\n",
+      "\n",
+      "양방향 BFS 기반 최단 경로 분포\n",
+      "\n",
+      "   S   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .\n",
+      "   .   .   █   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .\n",
+      "   .   █   .   .   █   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .\n",
+      "   .   .   .   █   .   .   █   .   .   .   .   .   .   .   .   .   .   .   .   .   .\n",
+      "   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .   .   .   .   .   .\n",
+      "   .   .   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .   .   .   .\n",
+      "   .   .   .   █   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .   .\n",
+      "   .   .   .   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .   .   .\n",
+      "   .   .   .   .   █   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .\n",
+      "   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .   .\n",
+      "   .   .   .   .   .   █   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .\n",
+      "   .   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .   .\n",
+      "   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   █   .   .   .   .   .\n",
+      "   .   .   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   .   .   .   .\n",
+      "   .   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   █   .   .   .   .\n",
+      "   .   .   .   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   .   .   .\n",
+      "   .   .   .   .   .   .   .   .   .   .   .   █   .   .   █   .   .   █   .   .   .\n",
+      "   .   .   .   .   .   .   .   .   .   .   .   .   .   █   .   .   █   .   .   .   .\n",
+      "   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   █   .   .   █   .   .\n",
+      "   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   █   .   .   .\n",
+      "   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   .   G   .\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 11\t7562\t 나이트의 이동\n",
+    "\n",
+    "from collections import deque ## 양방향 BFS 경로 출력\n",
+    "\n",
+    "# ===== 설정 =====\n",
+    "N = 21\n",
+    "start = (0, 0)\n",
+    "goal = (20,19)\n",
+    "\n",
+    "steps = (-2, -1, 1, 2)\n",
+    "directions = [\n",
+    "    (dr, dc)\n",
+    "    for dr in steps\n",
+    "    for dc in steps\n",
+    "    if abs(dr) + abs(dc) == 3\n",
+    "]\n",
+    "\n",
+    "def is_valid(r, c):\n",
+    "    return 0 <= r < N and 0 <= c < N\n",
+    "\n",
+    "# ===== BFS 거리 계산 =====\n",
+    "def bfs_distance(start):\n",
+    "    dist = [[-1]*N for _ in range(N)]\n",
+    "    dq = deque([start])\n",
+    "    dist[start[0]][start[1]] = 0\n",
+    "\n",
+    "    while dq:\n",
+    "        r, c = dq.popleft()\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "            if is_valid(nr, nc) and dist[nr][nc] == -1:\n",
+    "                dist[nr][nc] = dist[r][c] + 1\n",
+    "                dq.append((nr, nc))\n",
+    "    return dist\n",
+    "\n",
+    "# ===== 양방향 BFS =====\n",
+    "dist_start = bfs_distance(start)\n",
+    "dist_goal = bfs_distance(goal)\n",
+    "D = dist_start[goal[0]][goal[1]]\n",
+    "\n",
+    "# ===== 최단 경로 분포 누적 =====\n",
+    "board = [[0]*N for _ in range(N)]\n",
+    "for r in range(N):\n",
+    "    for c in range(N):\n",
+    "        if dist_start[r][c] != -1 and dist_goal[r][c] != -1:\n",
+    "            if dist_start[r][c] + dist_goal[r][c] == D:\n",
+    "                board[r][c] = 1\n",
+    "\n",
+    "# ===== 출력 (정렬 안전) =====\n",
+    "def print_board(board, start, goal):\n",
+    "    max_val = max(max(row) for row in board)\n",
+    "    width = max(len(str(max_val)), 1) + 3\n",
+    "\n",
+    "    print(\"양방향 BFS 기반 최단 경로 분포\\n\")\n",
+    "    for r in range(N):\n",
+    "        row = []\n",
+    "        for c in range(N):\n",
+    "            if (r, c) == start:\n",
+    "                row.append(\"S\".rjust(width))\n",
+    "            elif (r, c) == goal:\n",
+    "                row.append(\"G\".rjust(width))\n",
+    "            elif board[r][c] == 0:\n",
+    "                row.append(\".\".rjust(width))\n",
+    "            else:\n",
+    "                row.append(\"█\".rjust(width))\n",
+    "        print(\"\".join(row))\n",
+    "\n",
+    "print(f\"최단 거리: {D}\\n\")\n",
+    "print_board(board, start, goal)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "id": "b4c38d61",
    "metadata": {},
    "outputs": [],
