그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -1024,12 +1024,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "b4c38d61",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n"
+     ]
+    }
+   ],
    "source": [
-    "# 12\t7576\t 토마토"
+    "# 12\t7576\t 토마토\n",
+    "from collections import deque\n",
+    "from typing import Deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6 4\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 0\n",
+    "0 0 0 0 0 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "M, N = map(int, input().split())\n",
+    "\n",
+    "\n",
+    "boxs = [\n",
+    "    list(map(int, input().split()))\n",
+    "    for _ in range(N)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def is_vaild(r, c):\n",
+    "    return 0 <= r < N and 0 <= c < M\n",
+    "\n",
+    "\n",
+    "dq_type = Deque[tuple[tuple[int, int], int]]  \n",
+    "# (node, day) (box 자체를 day로 사용해서 다음엔 풀기. )\n",
+    "\n",
+    "\n",
+    "def BFS():\n",
+    "\n",
+    "    directions = [\n",
+    "        (dr, dc)\n",
+    "        for dr in [-1, +1, 0]\n",
+    "        for dc in [-1, +1, 0]\n",
+    "        if abs(dr) + abs(dc) == 1\n",
+    "    ]\n",
+    "\n",
+    "    dq: dq_type = deque([\n",
+    "        ((r, c), 1)\n",
+    "        for r in range(N)\n",
+    "        for c in range(M)\n",
+    "        if boxs[r][c] == 1\n",
+    "    ])\n",
+    "\n",
+    "    while dq:\n",
+    "        (row, col), day = dq.popleft()\n",
+    "        day += 1\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = row + dr, col + dc\n",
+    "            if is_vaild(nr, nc) and boxs[nr][nc] == 0:\n",
+    "                boxs[nr][nc] = day\n",
+    "                dq.append(((nr, nc), day))\n",
+    "\n",
+    "    for row in boxs:\n",
+    "        for val in row:\n",
+    "            if val == 0:\n",
+    "                return -1\n",
+    "    return day - 2\n",
+    "\n",
+    "\n",
+    "print(BFS())"
    ]
   },
   {
