--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -1105,12 +1105,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "c2c9c0a8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 13\t7569\t 토마토"
+    "# 13\t7569\t 토마토\n",
+    "\n",
+    "import sys\n",
+    "from collections import deque\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 3 2\n",
+    "0 0 0 0 0\n",
+    "0 0 0 0 0\n",
+    "0 0 0 0 0\n",
+    "0 0 0 0 0\n",
+    "0 0 1 0 0\n",
+    "0 0 0 0 0''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "M, N, H = map(int, input().split())\n",
+    "\n",
+    "box = [\n",
+    "    [ list(map(int, input().split())) for _ in range(N) ]\n",
+    "    for _ in range(H)\n",
+    "]\n",
+    "\n",
+    "dq = deque()\n",
+    "\n",
+    "\n",
+    "directions = [\n",
+    "    (dh, dr, dc)\n",
+    "    for dh in [-1, 0, 1]\n",
+    "    for dr in [-1, 0, 1]\n",
+    "    for dc in [-1, 0, 1]\n",
+    "    if abs(dh) + abs(dr) + abs(dc) == 1\n",
+    "]\n",
+    "\n",
+    "for h in range(H):\n",
+    "    for r in range(N):\n",
+    "        for c in range(M):\n",
+    "            if box[h][r][c] == 1:\n",
+    "                dq.append((h, r, c))\n",
+    "\n",
+    "if not dq: \n",
+    "    print(-1) \n",
+    "    exit()\n",
+    "\n",
+    "while dq:\n",
+    "    h, r, c = dq.popleft()\n",
+    "\n",
+    "    for dh, dr, dc in directions:\n",
+    "        nh, nr, nc = h + dh, r + dr, c + dc\n",
+    "        if 0 <= nh < H and 0 <= nr < N and 0 <= nc < M and box[nh][nr][nc] == 0:\n",
+    "            box[nh][nr][nc] = box[h][r][c] + 1\n",
+    "            dq.append((nh, nr, nc))\n",
+    "\n",
+    "\n",
+    "def final_result():\n",
+    "    max_day  = 1\n",
+    "    for h in range(H):\n",
+    "        for r in range(N):\n",
+    "            for c in range(M):\n",
+    "                day = box[h][r][c]\n",
+    "                if day == 0:\n",
+    "                    return -1\n",
+    "                if day > max_day :\n",
+    "                    max_day  = day\n",
+    "\n",
+    "    return max_day - 1\n",
+    "\n",
+    "print(final_result())\n",
+    "\n"
    ]
   },
   {
@@ -1146,7 +1223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
