그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -1192,12 +1192,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bf3165b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[31mSystemExit\u001b[39m\u001b[31m:\u001b[39m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/sejong/projects/251117_MathForPython/.venv/lib/python3.13/site-packages/IPython/core/interactiveshell.py:3707: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
    "source": [
-    "# 14\t16928\t 뱀과 사다리 게임"
+    "# 14\t16928\t 뱀과 사다리 게임\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3 7\n",
+    "32 62\n",
+    "42 68\n",
+    "12 98\n",
+    "95 13\n",
+    "97 25\n",
+    "93 37\n",
+    "79 27\n",
+    "75 19\n",
+    "49 47\n",
+    "67 17''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "\n",
+    "T, B = map(int, input().split())\n",
+    "\n",
+    "move = {}\n",
+    "\n",
+    "for _ in range(T + B):\n",
+    "    start, end = map(int, input().split())\n",
+    "    move[start] = end\n",
+    "\n",
+    "\n",
+    "visited = [False] * 101\n",
+    "dq = deque([(1, 0)])\n",
+    "visited[1] = True\n",
+    "\n",
+    "while dq:\n",
+    "    position, steps = dq.popleft()\n",
+    "    steps += 1\n",
+    "\n",
+    "    for dice in range(1, 7):\n",
+    "        np = position + dice\n",
+    "        if np > 100: continue\n",
+    "\n",
+    "        if np in move:\n",
+    "            np = move[np]\n",
+    "\n",
+    "        if np == 100:\n",
+    "            print(steps)\n",
+    "            sys.exit(0)\n",
+    "\n",
+    "        if not visited[np]:\n",
+    "            dq.append((np, steps))\n",
+    "            visited[np] = True\n"
    ]
   },
   {
