--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -1278,12 +1278,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "c521b9a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
    "source": [
-    "# 15\t2206\t 벽 부수고 이동하기"
+    "# 15\t2206\t 벽 부수고 이동하기\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6 4\n",
+    "0100\n",
+    "1110\n",
+    "1000\n",
+    "0000\n",
+    "0111\n",
+    "0000''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "board = [list(map(int, input().rstrip())) for _ in range(N)]\n",
+    "visited = [set(), set()]  # 0 not Broke, 1 Broken\n",
+    "\n",
+    "directions = [\n",
+    "    (0, +1),\n",
+    "    (0, -1),\n",
+    "    (+1, 0),\n",
+    "    (-1, 0)\n",
+    "]\n",
+    "\n",
+    "\n",
+    "def bfs():\n",
+    "\n",
+    "    dq = deque([(0, 0, 0, 1)])  # (broken, row, col, length)\n",
+    "    visited[0].add((0, 0))\n",
+    "\n",
+    "    while dq:\n",
+    "        broken, r, c, length = dq.popleft()\n",
+    "        \n",
+    "        if r == N - 1 and c == M - 1:\n",
+    "            return length\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            nr, nc = r + dr, c + dc\n",
+    "\n",
+    "            if 0 <= nr < N and 0 <= nc < M:\n",
+    "\n",
+    "                if (nr, nc) not in visited[broken]:\n",
+    "                    \n",
+    "                    if board[nr][nc] == 0:\n",
+    "                        dq.append((broken, nr, nc, length + 1))\n",
+    "                        visited[broken].add((nr, nc))\n",
+    "\n",
+    "                    elif not broken:\n",
+    "                        dq.append((1, nr, nc, length + 1))\n",
+    "                        visited[1].add((nr, nc))\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "print(bfs())"
    ]
   },
   {
@@ -1299,7 +1364,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
