--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -1356,9 +1356,146 @@
    "execution_count": null,
    "id": "9cf4004c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n",
+      "NO\n"
+     ]
+    }
+   ],
    "source": [
-    "# 16\t1707\t 이분 그래프"
+    "# 16\t1707\t 이분 그래프\n",
+    "import sys\n",
+    "sys.setrecursionlimit(10**5)\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "3 2\n",
+    "1 3\n",
+    "2 3\n",
+    "4 4\n",
+    "1 2\n",
+    "2 3\n",
+    "3 4\n",
+    "4 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "out = []\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    V, E = map(int, input().split())\n",
+    "\n",
+    "    vertexs = [[] for _ in range(V + 1)]\n",
+    "    for _ in range(E):\n",
+    "        s, e = map(int, input().split())\n",
+    "        vertexs[s].append(e)\n",
+    "        vertexs[e].append(s)\n",
+    "\n",
+    "    color = {}\n",
+    "\n",
+    "\n",
+    "    def dfs(start, flag):\n",
+    "        color[start] = flag\n",
+    "\n",
+    "        for v in vertexs[start]:\n",
+    "            if v in color: \n",
+    "                if color[v] == flag: \n",
+    "                    return False\n",
+    "            else: \n",
+    "                if not dfs(v, not flag):\n",
+    "                    return False\n",
+    "\n",
+    "        return True\n",
+    "    \n",
+    "\n",
+    "    result = True    \n",
+    "    \n",
+    "    for vertex in range(1, V + 1):\n",
+    "        if vertex not in color:\n",
+    "            if not dfs(vertex, True):\n",
+    "                result = False\n",
+    "                break\n",
+    "\n",
+    "    out.append(\"YES\" if result else \"NO\")\n",
+    "\n",
+    "\n",
+    "print(\"\\n\".join(out))\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e8d787f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n",
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.setrecursionlimit(10**7)\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "3 2\n",
+    "1 3\n",
+    "2 3\n",
+    "4 4\n",
+    "1 2\n",
+    "2 3\n",
+    "3 4\n",
+    "4 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    V, E = map(int, input().split())\n",
+    "\n",
+    "    graph = [[] for _ in range(V + 1)]\n",
+    "    for _ in range(E):\n",
+    "        a, b = map(int, input().split())\n",
+    "        graph[a].append(b)\n",
+    "        graph[b].append(a)\n",
+    "\n",
+    "    color = [0] * (V + 1)   # 0: 미방문, 1: 빨강, -1: 파랑\n",
+    "\n",
+    "    def dfs(node, c):\n",
+    "        color[node] = c\n",
+    "        for nxt in graph[node]:\n",
+    "            if color[nxt] == c:      # 같은 색이면 실패\n",
+    "                return False\n",
+    "            if color[nxt] == 0:      # 아직 방문 안 했으면\n",
+    "                if not dfs(nxt, -c):\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    is_bipartite = True\n",
+    "\n",
+    "    for v in range(1, V + 1):\n",
+    "        if color[v] == 0:            # 방문 안 한 컴포넌트\n",
+    "            if not dfs(v, 1):\n",
+    "                is_bipartite = False\n",
+    "                break\n",
+    "\n",
+    "    print(\"YES\" if is_bipartite else \"NO\")\n"
    ]
   }
  ],
