--- a/A02_BAEKJOON/B01_Step/_21-30/C28_위상_정렬.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C28_위상_정렬.ipynb
@@ -220,13 +220,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4 2\n"
+      "3 1 4 2\n"
      ]
     }
    ],
    "source": [
     "# 3\t1766\t 문제집\n",
-    "import heapq\n",
+    "from heapq import heappush, heapify, heappop\n",
     "import sys\n",
     "from io import StringIO\n",
     "\n",
@@ -238,9 +238,27 @@
     "\n",
     "N, M = map(int, input().split())\n",
     "\n",
+    "graph = [ [] for _ in range(N + 1) ]\n",
+    "indegree = [0] * (N + 1)\n",
     "\n",
+    "for _ in range(M):\n",
+    "    a, b = map(int, input().split())\n",
+    "    graph[a].append(b)\n",
+    "    indegree[b] += 1\n",
     "\n",
-    "\n"
+    "pq = [i for i in range(1, N + 1) if indegree[i] == 0]\n",
+    "heapify(pq)\n",
+    "\n",
+    "solve = []\n",
+    "while pq: \n",
+    "    cur = heappop(pq)\n",
+    "    solve.append(cur)\n",
+    "    for nxt in graph[cur]:\n",
+    "        indegree[nxt] -= 1\n",
+    "        if indegree[nxt] == 0:\n",
+    "            heappush(pq, nxt)\n",
+    "\n",
+    "print(*solve)"
    ]
   }
  ],
