--- a/A02_BAEKJOON/B01_Step/_21-30/C29_최단_경로.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C29_최단_경로.ipynb
@@ -157,12 +157,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "28ac755b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t13549\t 숨바꼭질 3"
+    "# 3\t13549\t 숨바꼭질 3\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 17''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "min_dist = {N: 0}  # 시작노드 거리\n",
+    "\n",
+    "INF = sys.maxsize\n",
+    "dq = deque([(0, N)])\n",
+    "while dq:\n",
+    "    cur_dist, cur = dq.popleft()\n",
+    "    if cur == M : break\n",
+    "    for nxt, cost in [(cur * 2, 0), (cur + 1, 1), (cur - 1, 1)]:\n",
+    "        nxt_dist = cur_dist + cost\n",
+    "        if 0 <= nxt <= 10000 and nxt_dist < min_dist.get(nxt, INF):\n",
+    "            min_dist[nxt] = nxt_dist\n",
+    "            if cost == 0:\n",
+    "                dq.appendleft((nxt_dist, nxt))\n",
+    "            else:\n",
+    "                dq.append((nxt_dist, nxt))\n",
+    "\n",
+    "print(min_dist[M])"
    ]
   },
   {
@@ -170,19 +205,267 @@
    "execution_count": null,
    "id": "90bd700e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t9370\t 미확인 도착지"
+    "# 4\t9370\t 미확인 도착지\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "5 4 2\n",
+    "1 2 3\n",
+    "1 2 6\n",
+    "2 3 2\n",
+    "3 4 4\n",
+    "3 5 3\n",
+    "5\n",
+    "4\n",
+    "6 9 2\n",
+    "2 3 1\n",
+    "1 2 1\n",
+    "1 3 3\n",
+    "2 4 4\n",
+    "2 5 5\n",
+    "3 4 3\n",
+    "3 6 2\n",
+    "4 5 4\n",
+    "4 6 3\n",
+    "5 6 7\n",
+    "5\n",
+    "6''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "T = int(input())\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    n, m, t = map(int, input().split())  # n 교차(노드) 개수, 도로개수(연결), 목적지 후보의 개수\n",
+    "    start, g, h = map(int, input().split())  # 출발지, g -> h 지나감. ( 필수로 지나감 ) \n",
+    "\n",
+    "    graph = [[] for _ in range(n + 1)]\n",
+    "\n",
+    "    for _ in range(m):\n",
+    "        a, b, w = map(int, input().split())\n",
+    "        graph[a].append((b, w))\n",
+    "        graph[b].append((a, w))\n",
+    "    \n",
+    "    candidates = []\n",
+    "    for _ in range(t):\n",
+    "        candidates.append(int(input()))\n",
+    "\n",
+    "    # 출발지 지정 후 다익스라 리턴 함수 구현\n",
+    "\n",
+    "    def dextra(s):\n",
+    "        min_dist = [INF] * (n + 1)\n",
+    "        min_dist[s] = 0\n",
+    "        pq = [(0, s)] # 시작노드. \n",
+    "\n",
+    "        while pq:\n",
+    "            cur_dist, cur = heappop(pq)\n",
+    "\n",
+    "            if cur_dist > min_dist[cur]:\n",
+    "                continue\n",
+    "\n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                nxt_dist = cur_dist + cost\n",
+    "                if nxt_dist < min_dist[nxt]:\n",
+    "                    min_dist[nxt] = nxt_dist\n",
+    "                    heappush(pq, (nxt_dist, nxt))\n",
+    "                    \n",
+    "        return min_dist\n",
+    "\n",
+    "    # start 로 시작해서 최단거리 다익스트라 구함. \n",
+    "\n",
+    "    from_s = dextra(start)\n",
+    "    from_g = dextra(g)\n",
+    "    from_h = dextra(h)\n",
+    "\n",
+    "\n",
+    "    # 지정 노드를 반드시 지나가면서 최단거리 다 익스라 구함. \n",
+    "    # 두개 비교해서 일치하는 값만 리턴. \n",
+    "\n",
+    "    # s -> g -> h -> c\n",
+    "    # s -> h -> g -> c\n",
+    "\n",
+    "    def check(c):\n",
+    "        path1 = from_s[g] + from_g[h] + from_h[c]\n",
+    "        path2 = from_s[h] + from_h[g] + from_g[c]\n",
+    "\n",
+    "        return from_s[c] == min(path1, path2) \n",
+    "\n",
+    "    possible = [candi for candi in candidates if check(candi)]\n",
+    "    possible.sort()\n",
+    "    print(*possible)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
+   "id": "538cba40",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 5\n",
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4\t9370\t 미확인 도착지 (홀짝 트릭)\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "5 4 2\n",
+    "1 2 3\n",
+    "1 2 6\n",
+    "2 3 2\n",
+    "3 4 4\n",
+    "3 5 3\n",
+    "5\n",
+    "4\n",
+    "6 9 2\n",
+    "2 3 1\n",
+    "1 2 1\n",
+    "1 3 3\n",
+    "2 4 4\n",
+    "2 5 5\n",
+    "3 4 3\n",
+    "3 6 2\n",
+    "4 5 4\n",
+    "4 6 3\n",
+    "5 6 7\n",
+    "5\n",
+    "6''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "T = int(input())\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "for _ in range(T):\n",
+    "    n, m, t = map(int, input().split())  # n 교차(노드) 개수, 도로개수(연결), 목적지 후보의 개수\n",
+    "    start, g, h = map(int, input().split())  # 출발지, g -> h 지나감. ( 필수로 지나감 ) \n",
+    "\n",
+    "    graph = [[] for _ in range(n + 1)]\n",
+    "\n",
+    "    for _ in range(m):\n",
+    "        a, b, w = map(int, input().split())\n",
+    "        double = w * 2\n",
+    "\n",
+    "        if (a, b) == (g, h) or (a, b) == (h, g):\n",
+    "            double -= 1\n",
+    "\n",
+    "        graph[a].append((b, double))\n",
+    "        graph[b].append((a, double))\n",
+    "    \n",
+    "    candidates = []\n",
+    "    for _ in range(t):\n",
+    "        candidates.append(int(input()))\n",
+    "\n",
+    "    # 출발지 지정 후 다익스라 리턴 함수 구현\n",
+    "\n",
+    "    def dextra(s):\n",
+    "        min_dist = [INF] * (n + 1)\n",
+    "        min_dist[s] = 0\n",
+    "        pq = [(0, s)] # 시작노드. \n",
+    "\n",
+    "        while pq:\n",
+    "            cur_dist, cur = heappop(pq)\n",
+    "\n",
+    "            if cur_dist > min_dist[cur]:\n",
+    "                continue\n",
+    "\n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                nxt_dist = cur_dist + cost\n",
+    "                if nxt_dist < min_dist[nxt]:\n",
+    "                    min_dist[nxt] = nxt_dist\n",
+    "                    heappush(pq, (nxt_dist, nxt))\n",
+    "                    \n",
+    "        return min_dist\n",
+    "\n",
+    "    # start 로 시작해서 최단거리 다익스트라 구함. \n",
+    "\n",
+    "    from_s = dextra(start)\n",
+    "    possible = [c for c in candidates if from_s[c] != INF and from_s[c] % 2 == 1]\n",
+    "    possible.sort()\n",
+    "    print(*possible)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "552f7cbc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t11657\t 타임머신\n"
+    "# 5\t11657\t 타임머신\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "1 2 4\n",
+    "1 3 3\n",
+    "2 3 -1\n",
+    "3 1 -2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "edges = []\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    edges.append((a, b, c))\n",
+    "\n",
+    "\n",
+    "min_dist = [INF] * (N + 1)\n",
+    "min_dist[1] = 0\n",
+    "\n",
+    "for _ in range(N - 1):\n",
+    "    for a, b, cost in edges:\n",
+    "        if min_dist[a] != INF and min_dist[b] > min_dist[a] + cost:\n",
+    "            min_dist[b] = min_dist[a] + cost\n",
+    "\n",
+    "for a, b, cost in edges:\n",
+    "    if min_dist[a] != INF and min_dist[b] > min_dist[a] + cost:\n",
+    "        print(-1)\n",
+    "        sys.exit(0)\n",
+    "\n",
+    "for i in range(2, N + 1):\n",
+    "    print(min_dist[i] if min_dist[i] != INF else -1)"
    ]
   },
   {
@@ -208,7 +491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
