--- a/A02_BAEKJOON/B01_Step/_21-30/C29_최단_경로.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C29_최단_경로.ipynb
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "552f7cbc",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
     }
    ],
    "source": [
-    "# 5\t11657\t 타임머신\n",
+    "# 5\t11657\t 타임머신 (벨만포드)\n",
     "\n",
     "import sys\n",
     "\n",
@@ -473,9 +473,147 @@
    "execution_count": null,
    "id": "3e143eb9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 3 1 4\n",
+      "12 0 15 2 5\n",
+      "8 5 0 1 1\n",
+      "10 7 13 0 3\n",
+      "7 4 10 6 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t11404\t 플로이드"
+    "# 6\t11404\t 플로이드\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5\n",
+    "14\n",
+    "1 2 2\n",
+    "1 3 3\n",
+    "1 4 1\n",
+    "1 5 10\n",
+    "2 4 2\n",
+    "3 4 1\n",
+    "3 5 1\n",
+    "4 5 3\n",
+    "3 5 10\n",
+    "3 1 8\n",
+    "1 4 2\n",
+    "5 1 7\n",
+    "3 4 2\n",
+    "5 2 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "m = int(input())\n",
+    "\n",
+    "graph = [[] for _ in range(n + 1)]\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    start, end, cost = map(int, input().split())\n",
+    "    graph[start].append((end, cost))\n",
+    "\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "from heapq import heappop, heappush\n",
+    "\n",
+    "def dextra(s):\n",
+    "    min_cost = [INF] * (n + 1)\n",
+    "    min_cost[s] = 0\n",
+    "    pq = [(0, s)]\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_cost, cur = heappop(pq)\n",
+    "        if cur_cost <= min_cost[cur]:\n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                nxt_cost = cur_cost + cost\n",
+    "                if nxt_cost < min_cost[nxt]:\n",
+    "                    min_cost[nxt] = nxt_cost\n",
+    "                    heappush(pq, (nxt_cost, nxt))\n",
+    "\n",
+    "    for i in range(1, n+ 1):\n",
+    "        if min_cost[i] == INF:\n",
+    "            min_cost[i] = 0\n",
+    "\n",
+    "    return min_cost\n",
+    "\n",
+    "out = []\n",
+    "for start in range(1, n + 1):\n",
+    "    out.append(dextra(start))\n",
+    "\n",
+    "for row in out:\n",
+    "    print(*row[1:])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34ddfc77",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 2 3 1 4\n",
+      "12 0 15 2 5\n",
+      "8 5 0 1 1\n",
+      "10 7 13 0 3\n",
+      "7 4 10 6 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t11404\t 플로이드 (워셜)\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5\n",
+    "14\n",
+    "1 2 2\n",
+    "1 3 3\n",
+    "1 4 1\n",
+    "1 5 10\n",
+    "2 4 2\n",
+    "3 4 1\n",
+    "3 5 1\n",
+    "4 5 3\n",
+    "3 5 10\n",
+    "3 1 8\n",
+    "1 4 2\n",
+    "5 1 7\n",
+    "3 4 2\n",
+    "5 2 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "m = int(input())\n",
+    "\n",
+    "INF = sys.maxsize\n",
+    "dist = [[INF] * (n + 1) for _ in range(n + 1)]\n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    dist[i][i] = 0\n",
+    "\n",
+    "for _ in range(m):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    dist[a][b] = min(dist[a][b], c)\n",
+    "\n",
+    "for k in range(1, n + 1):\n",
+    "    for i in range(1, n + 1):\n",
+    "        for j in range(1, n + 1):\n",
+    "            dist[i][j] = min(dist[i][j], dist[i][k] + dist[k][j])\n",
+    "\n",
+    "for row in dist[1:]:\n",
+    "    print(*[val if val != INF else 0 for val in row[1:]])"
    ]
   },
   {
@@ -483,9 +621,229 @@
    "execution_count": null,
    "id": "f50f9a24",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t1956\t 운동 (노드, 300개(간선수 300개) 넘어가면 시간 초과. )\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "1 2 1\n",
+    "3 2 1\n",
+    "1 3 5\n",
+    "2 3 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "V, E = map(int, input().split())\n",
+    "\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "dist = [ [INF] * (V + 1) for _ in range(V + 1) ]\n",
+    "\n",
+    "for _ in range(E):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    dist[a][b] = min(dist[a][b], c)\n",
+    "\n",
+    "\n",
+    "for k in range(1, V + 1):\n",
+    "    for i in range(1, V + 1):\n",
+    "        for j in range(1, V + 1):\n",
+    "            dist[i][j] = min(dist[i][j], dist[i][k] + dist[k][j])\n",
+    "\n",
+    "min_dist = INF\n",
+    "\n",
+    "for i in range(1, V + 1):\n",
+    "    min_dist = min(min_dist, dist[i][i])\n",
+    "\n",
+    "print(min_dist if min_dist != INF else -1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e17a0b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t1956\t 운동 \n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3 4\n",
+    "1 2 1\n",
+    "3 2 1\n",
+    "1 3 5\n",
+    "2 3 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "V, E = map(int, input().split())\n",
+    "\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "graph = [[] for _ in range(V + 1)]\n",
+    "\n",
+    "for _ in range(E):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    graph[a].append((b, c))\n",
+    "\n",
+    "from heapq import heappop, heappush\n",
+    "\n",
+    "\n",
+    "def dijkstra(start):\n",
+    "    min_dist = [INF] * (V + 1)\n",
+    "    min_dist[start] = 0\n",
+    "\n",
+    "    pq = [(0, start)]\n",
+    "\n",
+    "    while pq:\n",
+    "        cur_dist, cur = heappop(pq)\n",
+    "\n",
+    "        if cur_dist <= min_dist[cur]:\n",
+    "            \n",
+    "            for nxt, cost in graph[cur]:\n",
+    "                nxt_dist = cur_dist + cost\n",
+    "                if nxt_dist < min_dist[nxt]:\n",
+    "                    min_dist[nxt] = nxt_dist\n",
+    "                    heappush(pq, (nxt_dist, nxt))\n",
+    "\n",
+    "    return min_dist\n",
+    "\n",
+    "answer = INF\n",
+    "\n",
+    "for i in range(1, V + 1):\n",
+    "    dist = dijkstra(i)\n",
+    "    for u in range(1, V + 1):\n",
+    "        for v, w in graph[u]:\n",
+    "            if v == i and dist[u] != INF:\n",
+    "                answer = min(answer, dist[u] + w)\n",
+    "\n",
+    "print(answer if answer != INF else -1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c33cd945",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# 7\t1956\t 운동"
+    "# 7\t1956\t 운동 (빠른 플로이드 워셜 최적화)\n",
+    "\n",
+    "import sys\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solution():\n",
+    "    INF = 10**15\n",
+    "    V, E = map(int, input().split())\n",
+    "\n",
+    "    dist = [[INF] * (V + 1) for _ in range(V + 1)]\n",
+    "\n",
+    "    for _ in range(E):\n",
+    "        a, b, c = map(int, input().split())\n",
+    "        if c < dist[a][b]:\n",
+    "            dist[a][b] = c\n",
+    "\n",
+    "    for mid in range(1, V + 1):\n",
+    "        mid_row = dist[mid]\n",
+    "        for start in range(1, V + 1):\n",
+    "            if dist[start][mid] == INF:\n",
+    "                continue\n",
+    "            start_row = dist[start]\n",
+    "            via = dist[start][mid]\n",
+    "            for end in range(1, V + 1):\n",
+    "                new_cost = via + mid_row[end]\n",
+    "                if new_cost < start_row[end]:\n",
+    "                    start_row[end] = new_cost\n",
+    "\n",
+    "    answer = INF\n",
+    "    for i in range(1, V + 1):\n",
+    "        if dist[i][i] < answer:\n",
+    "            answer = dist[i][i]\n",
+    "\n",
+    "    print(answer if answer < INF else -1)\n",
+    "\n",
+    "solution()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19ca910c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7\t1956\t 운동 \n",
+    "\n",
+    "import sys\n",
+    "from heapq import heappop, heappush\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "INF = sys.maxsize\n",
+    "\n",
+    "V, E = map(int, input().split())\n",
+    "graph = [[] for _ in range(V + 1)]\n",
+    "\n",
+    "for _ in range(E):\n",
+    "    a, b, c = map(int, input().split())\n",
+    "    graph[a].append((b, c))\n",
+    "\n",
+    "def get_min_cycle(start):\n",
+    "    dist = [INF] * (V + 1)\n",
+    "    pq = []\n",
+    "    \n",
+    "    # 시작점과 연결된 노드들을 먼저 큐에 삽입 (dist[start]는 INF 유지)\n",
+    "    for nxt, cost in graph[start]:\n",
+    "        if dist[nxt] > cost:\n",
+    "            dist[nxt] = cost\n",
+    "            heappush(pq, (cost, nxt))\n",
+    "    \n",
+    "    while pq:\n",
+    "        d, cur = heappop(pq)\n",
+    "        \n",
+    "        # 현재 거리가 이미 알고 있는 최단 거리보다 크면 스킵\n",
+    "        if d > dist[cur]:\n",
+    "            continue\n",
+    "            \n",
+    "        # 만약 시작점으로 돌아왔다면 이것이 이 노드를 포함한 최단 사이클\n",
+    "        if cur == start:\n",
+    "            return d\n",
+    "            \n",
+    "        # 이미 발견한 전체 최솟값보다 현재 거리가 커지면 더 볼 필요 없음 (가지치기)\n",
+    "        if d >= min_val:\n",
+    "            break\n",
+    "\n",
+    "        for nxt, cost in graph[cur]:\n",
+    "            if d + cost < dist[nxt]:\n",
+    "                dist[nxt] = d + cost\n",
+    "                heappush(pq, (dist[nxt], nxt))\n",
+    "    \n",
+    "    return dist[start]\n",
+    "\n",
+    "min_val = INF\n",
+    "for i in range(1, V + 1):\n",
+    "    # 각 노드마다 다익스트라 실행\n",
+    "    min_val = min(min_val, get_min_cycle(i))\n",
+    "\n",
+    "print(min_val if min_val != INF else -1)"
    ]
   }
  ],
