투 포인터 끝

--- a/A02_BAEKJOON/B01_Step/_21-30/C30_투_포인터.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C30_투_포인터.ipynb
@@ -266,9 +266,60 @@
    "execution_count": null,
    "id": "eb036d3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t1644\t 소수의 연속합"
+    "# 4\t1644\t 소수의 연속합\n",
+    "from math import isqrt\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''41''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N = int(input())\n",
+    "\n",
+    "    # 소수 찾기  에라토네스 채\n",
+    "    is_prime = [True] * (N + 1)\n",
+    "    for i in range(2, isqrt(N) + 1):\n",
+    "        if is_prime[i]:\n",
+    "            for j in range(i * i, N + 1, i):\n",
+    "                is_prime[j] = False\n",
+    "\n",
+    "    primes = [num for num in range(2, N + 1) if is_prime[num]]\n",
+    "    \n",
+    "\n",
+    "    # 투포인터\n",
+    "    count = 0\n",
+    "    interval_sum = 0\n",
+    "    end = 0\n",
+    "\n",
+    "    for start in range(len(primes)):\n",
+    "\n",
+    "        while interval_sum < N and end < len(primes):\n",
+    "            interval_sum += primes[end]\n",
+    "            end += 1\n",
+    "        \n",
+    "        if interval_sum == N:\n",
+    "            count += 1\n",
+    "        \n",
+    "        interval_sum -= primes[start]\n",
+    "\n",
+    "    print(count)\n",
+    "    \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    solve()\n"
    ]
   },
   {
@@ -276,9 +327,68 @@
    "execution_count": null,
    "id": "1ec31b40",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1073741824\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t1450\t 냅색문제"
+    "# 5\t1450\t 냅색문제\n",
+    "import sys\n",
+    "from bisect import bisect_right\n",
+    "from itertools import combinations\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''30 30\n",
+    "1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def get_subset_sum_dfs(arr):\n",
+    "    sums = []\n",
+    "    def dfs(idx, current_sum):\n",
+    "        if idx == len(arr):\n",
+    "            sums.append(current_sum)\n",
+    "            return\n",
+    "        \n",
+    "        dfs(idx + 1, current_sum)\n",
+    "        dfs(idx + 1, current_sum + arr[idx])\n",
+    "    dfs(0, 0)\n",
+    "    return sums\n",
+    "\n",
+    "def get_subset_sum(arr):\n",
+    "    sums = []\n",
+    "    for r in range(len(arr) + 1):\n",
+    "        for comb in combinations(arr, r):\n",
+    "            sums.append(sum(comb))\n",
+    "    return sums\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N, C = map(int, input().split())\n",
+    "    weight = list(map(int, input().split()))\n",
+    "\n",
+    "    mid = N // 2\n",
+    "\n",
+    "    left_sums = get_subset_sum(weight[:mid])\n",
+    "    right_sums = get_subset_sum(weight[mid:])\n",
+    "\n",
+    "    right_sums.sort()\n",
+    "\n",
+    "    count = 0\n",
+    "    for l_sum in left_sums:\n",
+    "        target = C - l_sum\n",
+    "        if target >= 0:\n",
+    "            count += bisect_right(right_sums, target)\n",
+    "\n",
+    "    print(count)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    solve()\n"
    ]
   }
  ],
