동적 계획법 시작

--- a/A02_BAEKJOON/B01_Step/_21-30/C30_투_포인터.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C30_투_포인터.ipynb
@@ -380,10 +380,82 @@
     "    right_sums.sort()\n",
     "\n",
     "    count = 0\n",
+    "\n",
     "    for l_sum in left_sums:\n",
     "        target = C - l_sum\n",
     "        if target >= 0:\n",
     "            count += bisect_right(right_sums, target)\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    solve()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "732557ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1073741824\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t1450\t 냅색문제\n",
+    "import sys\n",
+    "from itertools import combinations\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''30 30\n",
+    "1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def get_subset_sum_dfs(arr):\n",
+    "    sums = []\n",
+    "    def dfs(idx, current_sum):\n",
+    "        if idx == len(arr):\n",
+    "            sums.append(current_sum)\n",
+    "            return\n",
+    "        \n",
+    "        dfs(idx + 1, current_sum)\n",
+    "        dfs(idx + 1, current_sum + arr[idx])\n",
+    "    dfs(0, 0)\n",
+    "    return sums\n",
+    "\n",
+    "def get_subset_sum(arr):\n",
+    "    sums = []\n",
+    "    for r in range(len(arr) + 1):\n",
+    "        for comb in combinations(arr, r):\n",
+    "            sums.append(sum(comb))\n",
+    "    return sums\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    N, C = map(int, input().split())\n",
+    "    weight = list(map(int, input().split()))\n",
+    "\n",
+    "    mid = N // 2\n",
+    "\n",
+    "    left_sums = get_subset_sum(weight[:mid])\n",
+    "    right_sums = get_subset_sum(weight[mid:])\n",
+    "\n",
+    "    left_sums.sort()\n",
+    "    right_sums.sort()\n",
+    "\n",
+    "    count = 0\n",
+    "    right_idx = len(right_sums) - 1\n",
+    "\n",
+    "    for l_val in left_sums:\n",
+    "        while right_idx >= 0 and l_val + right_sums[right_idx] > C:\n",
+    "            right_idx -= 1\n",
+    "        \n",
+    "        count += (right_idx + 1)\n",
     "\n",
     "    print(count)\n",
     "\n",
