동적 계획법

--- a/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
+++ b/A02_BAEKJOON/B01_Step/_31_40/C31_동적_계획법_2.ipynb
@@ -2,20 +2,128 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "db7454f6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "864\n"
+     ]
+    }
+   ],
    "source": [
     "# 1\t11066\t 파일 합치기\n",
     "import sys\n",
     "\n",
     "from io import StringIO\n",
-    "sys.stdin = StringIO('''''')\n",
+    "sys.stdin = StringIO('''2\n",
+    "4\n",
+    "40 30 30 50\n",
+    "15\n",
+    "1 21 3 4 5 35 5 4 3 5 98 21 14 17 32''')\n",
+    "\n",
+    "def solve():\n",
+    "    input = sys.stdin.readline\n",
+    "\n",
+    "    T = int(input())\n",
+    "    for _ in range(T):\n",
+    "\n",
+    "        K = int(input())\n",
+    "        files = list(map(int, input().split()))\n",
+    "\n",
+    "        S = [0] * (K + 1)  # files 0번 부터 idx 개의 챕터의 누적합\n",
+    "        for i in range(1, K + 1):\n",
+    "            S[i] = S[i-1] + files[i - 1]\n",
+    "\n",
+    "        # dp[i][j] i부터 j 까지 결합하는데 최소 시간\n",
+    "        dp = [[0] * (K + 1) for _ in range(K + 1)]\n",
+    "\n",
+    "        for length in range(2, K + 1):\n",
+    "            for i in range(1, K - length + 2):\n",
+    "                j = i + length - 1\n",
+    "                candi = [dp[i][k] + dp[k+1][j] for k in range(i, j)]\n",
+    "\n",
+    "                # 구간을 두 부분으로 나누어 합이 최소가 되는 값 + 구간의 파일 크기 \n",
+    "                dp[i][j] = min(candi) + (S[j] - S[i-1])\n",
+    "\n",
+    "        print(dp[1][K])\n",
+    "solve()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "db62251c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "864\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\t11066\t 파일 합치기\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "4\n",
+    "40 30 30 50\n",
+    "15\n",
+    "1 21 3 4 5 35 5 4 3 5 98 21 14 17 32''')\n",
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "\n"
+    "def solve():\n",
+    "    K = int(input())\n",
+    "    files = list(map(int, input().split()))\n",
+    "\n",
+    "    S = [0] * (K + 1)  # files 0번 부터 idx 개의 챕터의 누적합\n",
+    "    for i in range(1, K + 1):\n",
+    "        S[i] = S[i-1] + files[i - 1]\n",
+    "\n",
+    "    # dp[i][j] i부터 j 까지 결합하는데 최소 시간\n",
+    "    dp = [[0] * (K + 1) for _ in range(K + 1)]\n",
+    "    min_k = [[0] * (K + 1) for _ in range(K + 1)]\n",
+    "\n",
+    "    for i in range(1, K):\n",
+    "        dp[i][i+1] = files[i-1] + files[i]\n",
+    "        min_k[i][i+1] = i # 분기점 저장\n",
+    "\n",
+    "    for length in range(3, K + 1):\n",
+    "        for i in range(1, K - length + 2):\n",
+    "            j = i + length - 1\n",
+    "\n",
+    "            start_k = min_k[i][j-1]\n",
+    "            end_k = min_k[i+1][j]\n",
+    "\n",
+    "            min_val = float('inf')\n",
+    "            opt_k = -1\n",
+    "\n",
+    "            # 크누스 최적화 적용 (증명됨) \n",
+    "            for k in range(start_k, end_k + 1):\n",
+    "                val = dp[i][k] + dp[k+1][j]\n",
+    "                if val < min_val:\n",
+    "                    min_val = val\n",
+    "                    opt_k = k\n",
+    "            \n",
+    "            # 구간을 두 부분으로 나누어 합이 최소가 되는 값 + 구간의 파일 크기 \n",
+    "            dp[i][j] = min_val + (S[j] - S[i-1])\n",
+    "            min_k[i][j] = opt_k\n",
+    "\n",
+    "    print(dp[1][K])\n",
+    "\n",
+    "T = int(input())\n",
+    "for _ in range(T):\n",
+    "    solve()"
    ]
   },
   {
@@ -31,7 +139,13 @@
     "from io import StringIO\n",
     "sys.stdin = StringIO('''''')\n",
     "\n",
-    "input = sys.stdin.readline"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -47,7 +161,13 @@
     "from io import StringIO\n",
     "sys.stdin = StringIO('''''')\n",
     "\n",
-    "input = sys.stdin.readline"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -63,7 +183,13 @@
     "from io import StringIO\n",
     "sys.stdin = StringIO('''''')\n",
     "\n",
-    "input = sys.stdin.readline"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -79,7 +205,13 @@
     "from io import StringIO\n",
     "sys.stdin = StringIO('''''')\n",
     "\n",
-    "input = sys.stdin.readline"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -95,7 +227,13 @@
     "from io import StringIO\n",
     "sys.stdin = StringIO('''''')\n",
     "\n",
-    "input = sys.stdin.readline"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()"
    ]
   },
   {
@@ -111,13 +249,33 @@
     "from io import StringIO\n",
     "sys.stdin = StringIO('''''')\n",
     "\n",
-    "input = sys.stdin.readline"
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def solve():\n",
+    "\n",
+    "    pass\n",
+    "\n",
+    "solve()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
